# Inky-app

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml
docs/superpowers/plans/: 2026-05-20-pet-naming-onboarding.md  2026-05-24-retro-popup-style.md
docs/superpowers/specs/: 2026-05-20-pet-naming-onboarding-design.md  2026-05-24-retro-popup-style-design.md
src/: App.module.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude.rs  main.rs  persistence.rs  pet_packs.rs
src/components/FocusFlowWidget/: FocusFlowWidget.module.css  FocusFlowWidget.tsx
src/components/PetRenderer/: PetRenderer.module.css  PetRenderer.tsx  petConfig.ts
src/styles/: global.css
src/types/: index.ts
src/utils/: aiParser.ts  aiSettings.ts  focusFlowPersistence.ts  level.ts  petPacks.ts
