[package]
name = "inky-app"
version = "0.1.0"
description = "Inky desktop focus assistant"
authors = ["Inky"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.13.2", features = ["json"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_System_SystemInformation",
  "Win32_UI_Input_KeyboardAndMouse",
] }
